# covkl

./: .gitignore  EXPERIMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  requirements.txt  shreeyam.mplstyle
collisions_analysis/: collisions.tex  collisions2.tex  merged.tex  references.bib  simdino_note.tex  simulate.py
covkl/: __init__.py  configs.py  data.py  eval.py  losses.py  models.py  train.py
flat_dino/: analyze_norms.py  mini_experiment.py  noise_dinov2.py  noise_experiment.py  noise_polar.py  noise_subspace.py  norm_investigation.py  norms_by_class.py  pca_rn18.py  pca_scatter.py  umap_ckpt.py
paper/: references.bib  template.tex
paper/sections/: experiments.tex  introduction.tex  method.tex  related_work.tex
paper2/: references.bib  template.tex
paper2/sections/: introduction.tex  method.tex  related_work.tex
scripts/: sweep.py
sidon/: sidon_toy.py
